--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/samantha-eva/music-voting-api#readme",
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "axios": "^1.11.0",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -28,7 +29,8 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "puppeteer": "^24.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
